--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,6 +1,10 @@
-$white: #fff;
+$white: #FFFFFF;
 $blue: #1698D9;
 $gray: #666666;
+$lightGray: #B3B3B3;
+$yellow: #FFFF66;
+
+
 
 
 $tablet-width: 768px;
