--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,5 +10,6 @@
 @import "./components/discription.scss";
 @import "./components/value.scss";
 @import "./components/downtext.scss";
-
-
+@import "./components/disabled.scss";
+@import "./components/selecred.scss";
+@import "./components/mouseleave.scss;
