--- a/source/sass/components/discription.scss
+++ b/source/sass/components/discription.scss
@@ -29,7 +29,7 @@
   margin-bottom: 15px;
 }
 
-.discription__servings, .discription__present, .disdiscription__text {
+.discription__servings, .discription__present, .discription__text {
   color: $gray;
   font-size: 14px;
   line-height: 16px;
