--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,4 +12,4 @@
 @import "./components/downtext.scss";
 @import "./components/disabled.scss";
 @import "./components/selecred.scss";
-@import "./components/mouseleave.scss;
+@import "./components/mouseleave.scss";
